# ai-portability

./: .gitignore  LAUNCH_POSTS.md  MASTER_PROMPT.md  README.md  pyproject.toml
ai_portability/: __init__.py  cli.py  crawler.py  report.py  scanner.py  scoring.py
datasets/: ai_portability_index_2026.json
report/: AI_CUDA_Lockin_Report_2026.md
tests/: test_cli.py  test_cli_scan.py  test_crawler.py  test_report.py  test_scanner.py  test_scoring.py
