[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-portability"
version = "0.1.0"
description = "Measure CUDA lock-in in open-source AI repositories."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "AI Portability Contributors" }
]
dependencies = [
  "requests>=2.31.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
ai-portability = "ai_portability.cli:main"

[tool.setuptools.packages.find]
include = ["ai_portability*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

